--- a/transition.css
+++ b/transition.css
@@ -1,4 +1,4 @@
-.hand.fade-enter-active,
+/* .hand.fade-enter-active,
 .hand.fade-leave-active {
     transition: opacity 1s;
 }
@@ -6,4 +6,35 @@
 .hand.fade-enter,
 .hand.fade-leave-to {
     opacity: 0;
+} */
+
+.hand-enter-active,
+.hand-leave-active {
+    transition: opacity .5s;
+}
+
+.hand-enter,
+.hand-leave-to {
+    opacity: 0;
+}
+
+.hand-enter-active .wrapper,
+.hand-leave-active .wrapper {
+    transition: transform .8s cubic-bezier(.08,.74,.34,1);
+    transform-origin: bottom center;
+}
+
+.hand-enter .wrapper,
+.hand-leave-to .wrapper {
+    transform: rotateX(90deg);
+}
+
+.hand-enter-active .card,
+.hand-leave-active .card {
+    transition: mergin .8s cubic-bezier(.08,.74,.34,1);
+}
+
+.hand-enter .card,
+.hand-leave-to .card {
+    margin: 0 -100px;
 }
