--- a/transition.css
+++ b/transition.css
@@ -38,3 +38,31 @@
 .hand-leave-to .card {
     margin: 0 -100px;
 }
+
+.card {
+    /* 用于进入，移动，鼠标悬停的动画 */
+    transition: all .3 s;
+}
+
+.card-enter {
+    opacity: 0;
+    /* 从右边滑入 */
+    transform: scale(.8) translateX(100px);
+}
+
+.card-leave-active {
+    /* 离开过渡的时间不同 */
+    transition: all 1s, opacity .5s .5s;
+    /* 保持水平位置不变 */
+    position: absolute !important;
+    /* 将玩家打出的卡牌绘制于其他卡牌之上 */
+    z-index: 10;
+    /* 在过渡期间不允许单击 */
+    pointer-events: none;
+}
+
+.card-leave-to {
+    opacity: 0;
+    /* 卡牌上升的同时放大 */
+    transform: translateX(-106px) translateY(-300px) scale(1.5);
+}
