--- a/transition.css
+++ b/transition.css
@@ -66,3 +66,14 @@
     /* 卡牌上升的同时放大 */
     transform: translateX(-106px) translateY(-300px) scale(1.5);
 }
+
+.zoom-enter-active,
+.zoom-leave-active {
+    transition: opacity .3s, transform .3s;
+}
+
+.zoom-enter,
+.zoom-leave-to {
+    opacity: 0;
+    transform: scale(.7);
+}
